# trustpilot-reviews-api

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  README.md  pyproject.toml  pytest.ini
docs/: design-doc.md
src/: api.py  auth.py  config.py  database.py  ingest.py  utils.py
src/reviewers/: models.py  router.py
src/reviews/: models.py  router.py
tests/: conftest.py  test_ingest.py  testing.db
tests/reviewers/: test_reviewers_endpoints.py
tests/reviews/: test_reviews_endpoints.py
