[project]
name = "trustpilot-technical-take-home"
description = "Tech challenge from Trustpilot"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji==2.14.0",
    "fastapi[standard]==0.115.6",
    "pycountry==24.6.1",
    "pydantic-extra-types==2.10.1",
    "pydantic==2.10.4",
    "sqlcipher3==0.5.4",
    "sqlmodel==0.0.22",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pre-commit",
    "ruff",
]
test = [
    "coverage",
    "faker",
    "pytest",
    "pytest-env",
    "pytest-instafail",
    "pytest-randomly",
]

[tool.uv]
package = false
default-groups = ["dev", "test"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
extend-select = [
    "I",  # isort, (auto-fixable)
    "ISC",  # Implicit String concatenation
    "RUF100",  # Unused noqa (auto-fixable)
]
ignore = [
    "E501",  # line too long handled by black
]

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 60
